--- a/Ch 7 Exam Grader.vcxproj
+++ b/Ch 7 Exam Grader.vcxproj
@@ -125,6 +125,10 @@
   <ItemGroup>
     <ClCompile Include="Ch 7 Exam Grader.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="CorrectAnswers.txt" />
+    <Text Include="StudentAnswers.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
